--- a/package.json
+++ b/package.json
@@ -35,6 +35,12 @@
         {
           "loose": true
         }
+      ],
+      [
+        "transform-object-rest-spread",
+        {
+          "useBuiltIns": true
+        }
       ]
     ]
   },
@@ -43,7 +49,7 @@
     "autoprefixer": "^6.3.7",
     "babel-core": "^6.3.26",
     "babel-loader": "^6.1.0",
-    "babel-polyfill": "^6.3.14",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^0.28.0",
     "eslint": "4.19.1",
@@ -80,7 +86,8 @@
     "angular": "1.6.4",
     "angular-sanitize": "1.6.4",
     "angular-ui-router": "^1.0.18",
-    "bulma": "^0.4.0",
+    "babel-polyfill": "^6.26.0",
+    "bulma": "^0.7.1",
     "moment": "^2.15.1"
   },
   "engines": {
