--- a/package.json
+++ b/package.json
@@ -27,19 +27,13 @@
   "license": "MIT",
   "babel": {
     "presets": [
-      "env"
+      "es2015"
     ],
     "plugins": [
       [
         "transform-es2015-classes",
         {
           "loose": true
-        }
-      ],
-      [
-        "transform-object-rest-spread",
-        {
-          "useBuiltIns": true
         }
       ]
     ]
@@ -49,8 +43,8 @@
     "autoprefixer": "^6.3.7",
     "babel-core": "^6.3.26",
     "babel-loader": "^6.1.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.0.0",
+    "babel-polyfill": "^6.26.0",
     "css-loader": "^0.28.0",
     "eslint": "4.19.1",
     "eslint-config-airbnb-base": "^13.0.0",
@@ -86,7 +80,6 @@
     "angular": "1.6.4",
     "angular-sanitize": "1.6.4",
     "angular-ui-router": "^1.0.18",
-    "babel-polyfill": "^6.26.0",
     "bulma": "^0.7.1",
     "moment": "^2.15.1"
   },
