--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "analyze": "webpack --json | webpack-bundle-size-analyzer",
     "clean:full": "npm cache clean && rimraf -- node_modules doc typings coverage dist",
     "clean": "rimraf dist/",
-    "build": "export NODE_ENV=dev && webpack",
-    "build:prod": "export NODE_ENV=prod && webpack -p",
+    "build": "set NODE_ENV=dev && webpack",
+    "build:prod": "set NODE_ENV=prod && webpack -p",
     "lint": "eslint src/ || true",
     "start": "webpack-dev-server --config config/webpack.dev.js --inline --progress --profile --colors --watch --display-error-details --display-cached",
     "test": "karma start",
