--- a/package.json
+++ b/package.json
@@ -43,8 +43,9 @@
     "autoprefixer": "^6.3.7",
     "babel-core": "^6.3.26",
     "babel-loader": "^6.1.0",
-    "babel-preset-es2015": "^6.0.0",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.0.0",
+    "chai": "^4.1.2",
     "css-loader": "^0.28.0",
     "eslint": "4.19.1",
     "eslint-config-airbnb-base": "^13.0.0",
@@ -55,9 +56,12 @@
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "karma": "^1.6.0",
+    "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.2",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.3",
+    "karma-sinon": "^1.0.5",
     "karma-sourcemap-loader": "^0.3.4",
     "karma-webpack": "^2.0.3",
     "mocha": "^3.2.0",
@@ -68,6 +72,7 @@
     "rimraf": "^2.5.2",
     "sass-loader": "4.1.1",
     "script-loader": "^0.7.0",
+    "sinon": "^6.1.4",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.6",
     "webpack": "1.14.0",
